chore: Disabled touch-action on html,body tag as it completely stopped working on mobile.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,5 +30,5 @@ html {
 
 html,
 body {
-    touch-action: none;
+    // touch-action: none;
 }
